# IoTKitHoLV3

./: .gitignore  .gitmodules  README.md
PinKitIoTHubApp/: PinKitIoTHubApp.sln
PinKitIoTHubApp/PinKitIoTHubApp/: HandsOn.cs  HttpUtility.cs  IoTHoLConfig.cs  PinKitIoTHubApp.csproj  Program.cs  Resources.Designer.cs  SimpleMobileAppsClient.cs
PinKitIoTHubApp/PinKitIoTHubApp/Libs/: MicrosoftAzureDevicesClient.txt
PinKitIoTHubApp/PinKitIoTHubApp/Models/: DeviceEntry.cs  SensorReading.cs
PinKitIoTHubApp/PinKitIoTHubApp/PinKit/: Accelerometer.cs  BoardFullColorLED.cs  LightSensor.cs  PerformanceCounter.cs  PinKit.cs  (+2 more)
RPi2FHIoTHubApp/: RPi2FHIoTHubApp.sln
RPi2FHIoTHubApp/RPi2FHIoTHubApp/: App.xaml  App.xaml.cs  HandsOn.cs  IoTHoLConfig.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  RPi2FHIoTHubApp.csproj  RPi2FHIoTHubApp_TemporaryKey.pfx  project.json  project.lock.json
RPiIoTHubApp/: RPiIoTHubApp.sln
RPiIoTHubApp/RPiIoTHubApp/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  RPiIoTHubApp.csproj  RPiIoTHubApp_TemporaryKey.pfx  Sensor.cs
Support/Step10/: Functions.cs  Monitor.aspx  Program.cs  WebJobDashboardConnectionString.txt  al_run.csx.txt  pred_run.csx.txt  project.json.txt  run.csx.txt
Support/Step2/: DeviceEntry.html  DeviceEntry.txt
Support/Step3/: DeviceEntry.css  DeviceEntry.js  DeviceEntry.txt  DeviceManagement.txt  Startup.MobileApp.txt
Support/Step4/: Query.txt
Support/Step5/: Query-for-RaspberryPIIoTEdgeSDK.txt  Query.txt
Support/Step6/: DashboardController.cs.txt  Index.cshtml  PBIE_ConnectionStrings.txt  Query.txt  Report.cshtml  ReportViewModel.cs  Reports.cshtml  ReportsViewModel.cs  _Layout.cshtml
Support/Step7/: DeviceStatusHub.cs  IoTDataModel.cs  SASSensorController.cs  StorageConnection.txt
Support/Step8/: AccessML.txt  Functions.cs  IoTDataModel.cs  SASSensor.aspx  SASSensorController.cs
Support/Step9/: AppStart.cs.txt  DeviceStatusHub.cs  Functions.cs  IoTDataModel.cs  Program.cs  SASSensor.aspx  SASSensorController.cs  powerbi-visuals.all.min.js  visuals.css
WinIoTCoreTIIoTHubApp/: README.md  WinIoTCoreTIIoTHubApp.sln
WinIoTCoreTIIoTHubApp/TISensorTagLibrary/: BLETISensor.cs  README.txt  SensorBase.cs  SensorName.cs  SensorValueChangedEventArgs.cs  TISensorTagLibrary.csproj  project.json
WinIoTCoreTIIoTHubApp/WinIoTCoreTIIoTHubApp/: App.xaml  App.xaml.cs  HandsOn.cs  IoTHoLConfig.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  WinIoTCoreTIIoTHubApp.csproj  WinIoTCoreTIIoTHubApp_TemporaryKey.pfx  project.json
WpfEmuIoTHubApp/: WpfEmuIoTHubApp.sln
WpfEmuIoTHubApp/WpfEmuIoTHubApp/: App.xaml  App.xaml.cs  HandsOn.cs  IoTHolConfig.cs  MainWindow.xaml  MainWindow.xaml.cs  WpfEmuIoTHubApp.csproj  packages.config
linux_sample/: add_CMakeLists.txt  readme.md
linux_sample/iotkithol_sample_amqp/: CMakeLists.txt  iotkithol_sample_amqp.c  iotkithol_sample_amqp.h
linux_sample/iotkithol_sample_dm/: CMakeLists.txt  iotkithol_sample_dm.c  iotkithol_sample_dm.h  readme.md
linux_sample/iotkithol_sample_http/: CMakeLists.txt  iotkithol_sample_http.c  iotkithol_sample_http.h
linux_sample/raspberrypi_photoupload/: CMakeLists.txt  raspberrypi_photoupload.c  raspberrypi_photoupload.h
linux_sample/raspberrypi_photoupload/linux/: CMakeLists.txt  main.c
(+28 files in other folders)
